@@ -5,6 +5,8 @@
       This change should be seamless since the C implementation is numerically equivalent.
     * Radau5 C with SuperLU now requires compilation with '-D__RADAU5_WITH_SUPERLU'
     * Refactored Radau5 C implementation; moved to thirdparts/radau5/.
+    * Replaced event localization for explicit problems with an equivalent C implementation.
+    * Added missing counts on event indicator evaluations when setting problem data in solvers.
 
 --- Assimulo-3.3.1 ---
     * Minor refactoring of Radau5 C implementation:
